--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "crp-raytracer-webapp",
   "version": "0.0.1",
-  "dependencies": {},
+  "dependencies": {
+    "brfs": "~1.0.1"
+  },
   "devDependencies": {
     "grunt": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
@@ -25,7 +27,8 @@
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
     "jshint-stylish": "~0.1.3",
-    "crowdprocess": "~0.5.11"
+    "browserify": "~3.41.0",
+    "crp-raytracer": "0.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
