--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.1.1",
-    "jquery": "~1.11.0"
+    "jquery": "~1.11.0",
+    "codemirror": "~4.0.3",
+    "jquery-ui": "~1.10.4"
   },
   "devDependencies": {}
 }
