--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "crp-raytracer-webapp",
   "version": "0.0.1",
   "dependencies": {
-    "brfs": "~1.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.0",
@@ -27,7 +26,7 @@
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
     "jshint-stylish": "~0.1.3",
-    "browserify": "~3.41.0",
+    "webworkify": "^0.1.0",
     "crp-raytracer": "0.0.4"
   },
   "engines": {
